# 2024-P1-Dollar0712

./: README.md  pyproject.toml
todo/views/: routes.py
